--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ table td:first-child {
 #toggle .https
 {
   color: rgba(0, 0, 0, 0.5);
-  transition: color 0.25s;
+  transition: color 0.25s ease-in-out;
 }
 
 #toggle.https .http,
@@ -116,7 +116,7 @@ a#toggle:hover {
   border-radius: 7px;
   background-color: rgba(34, 31, 31, 0.26);
   margin: auto 0.5em;
-  transition: background-color 0.25s;
+  transition: background-color 0.25s ease-in-out;
 }
 
 .switch .knob {
@@ -133,7 +133,7 @@ a#toggle:hover {
     0px 2px 2px 0px rgba(0, 0, 0, 0.24);
 
   transform: translateX(10px);
-  transition: transform 0.25s, background-color 0.25s;
+  transition: transform 0.25s ease-in-out, background-color 0.25s ease-in-out;
 }
 
 .http:not(:hover)  .switch,
