Revert "Remove min-height: 100% as it serves no benefit."
This reverts commit 4cc0f994cddf2bd52ae9e47d14b1ec4d5907d4c9.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /* Light material design boilerplate. */
 html, body {
   width: 100%;
+  min-height: 100%;
   margin: 0;
   padding: 0;
   background: #EEEEEE;
