--- a/style.css
+++ b/style.css
@@ -3,7 +3,13 @@ html, body {
   width: 100%;
   margin: 0;
   padding: 0;
-  background: #EEEEEE;
+  background: var(--primary-color);
+}
+
+:root{
+  --primary-color : #FFF;
+  --secondary-color : #212121;
+
 }
 
 /* Only apply min-height to non-print media */
@@ -35,7 +41,7 @@ body {
 }
 
 button {
-  background: #FFF; border: none;
+  background: var(--primary-color);; border: none;
   font-size: 1.5em;
   width: 400px; padding: 0.5em; margin: 10px 10px;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
@@ -129,7 +135,7 @@ a#toggle:hover {
   height: 20px;
   margin: -3px;
   border-radius: 10px;
-  background-color: #F1F1F1;
+  background-color: var(--primary-color);
   border:
     inset 0.5px rgba(255, 255, 255, 0.12),
     inset 0.5px rgba(255, 255, 255, 0.12);
