--- a/style.css
+++ b/style.css
@@ -4,11 +4,14 @@ html, body {
   margin: 0;
   padding: 0;
   background: var(--primary-color);
+  color: var(--secondary-color);
 }
 
 :root{
-  --primary-color : #FFF;
-  --secondary-color : #212121;
+  /* --primary-color : #FFF;
+  --secondary-color : #101020; */
+  --primary-color : #101020;
+  --secondary-color : #FFF;
 
 }
 
@@ -41,16 +44,18 @@ body {
 }
 
 button {
-  background: var(--primary-color);; border: none;
+  background: var(--primary-color); border: none;
   font-size: 1.5em;
+  color: var(--secondary-color);
   width: 400px; padding: 0.5em; margin: 10px 10px;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  box-shadow: 0 3px 6px var(--secondary-color), 0 3px 6px var(--secondary-color);
   transition: all 150ms;
 }
 button:hover {
-  background: #FFA;
+  background: rgb(243, 243, 197);
+  color: var(--primary-color);
   cursor: pointer;
-  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  box-shadow: 0 10px 20px var(--secondary-color), 0 6px 6px var(--secondary-color);
   transform: translateY(-2px);
 }
 button.success {
@@ -80,21 +85,21 @@ table td:first-child {
   font-size: 1.5em;
   padding: 1em;
   margin: 1em;
-  color: black;
+  color: var(--secondary-color);
   text-decoration: none;
 }
 
 #toggle .http,
 #toggle .https
 {
-  color: rgba(0, 0, 0, 0.5);
+  color: var(--secondary-color);
   transition: color 0.25s ease-in-out;
 }
 
 #toggle.https .http,
 #toggle.http .https
 {
-  color: rgba(0, 0, 0, 0.5);
+  color: var(--secondary-color);
 }
 
 #toggle.http:not(:hover) .http {
@@ -116,7 +121,7 @@ table td:first-child {
 }
 
 a#toggle:hover {
-  color: black;
+  color: var(--secondary-color);
 }
 
 
@@ -125,7 +130,7 @@ a#toggle:hover {
   width: 34px;
   height: 14px;
   border-radius: 7px;
-  background-color: rgba(34, 31, 31, 0.26);
+  background-color: var(--secondary-color);
   margin: auto 0.5em;
   transition: background-color 0.25s ease-in-out;
 }
@@ -140,8 +145,8 @@ a#toggle:hover {
     inset 0.5px rgba(255, 255, 255, 0.12),
     inset 0.5px rgba(255, 255, 255, 0.12);
   box-shadow:
-    0px 0px 2px 0px rgba(0, 0, 0, 0.12),
-    0px 2px 2px 0px rgba(0, 0, 0, 0.24);
+    0px 0px 2px 0px var(--secondary-color),
+    0px 2px 2px 0px var(--secondary-color);
 
   transform: translateX(10px);
   transition: transform 0.25s ease-in-out, background-color 0.25s ease-in-out;
