Dark mode icon is added

--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@ html, body {
 }
 
 :root{
-  /* --primary-color : #FFF;
-  --secondary-color : #101020; */
+  --primary-color : #FFF;
+  --secondary-color : #101020;
   
 
 }
