--- a/style.css
+++ b/style.css
@@ -42,7 +42,8 @@ button {
   transition: all 150ms;
 }
 button:hover {
-  background: #FFA;
+  background: #B0E0E6;
+  cursor: pointer;
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   transform: translateY(-2px);
 }
