--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ button:hover {
   cursor: pointer;
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   transform: translateY(-2px);
+  -webkit-tap-highlight-color: transparent;
 }
 button.success {
   background: #AFA;
