--- a/style.css
+++ b/style.css
@@ -91,25 +91,25 @@ table td:first-child {
   color: rgba(0, 0, 0, 0.5);
 }
 
-#toggle.http:not(:hover) .http {
+#toggle.http:not(:active) .http {
   color: #DB4437;
 }
 
-#toggle.https:not(:hover) .https {
+#toggle.https:not(:active) .https {
   color: #1AC222;
 }
 
-#toggle.http:hover .https {
+#toggle.http:active .https {
   text-decoration: underline;
   color: #1AC222;
 }
 
-#toggle.https:hover .http {
+#toggle.https:active .http {
   text-decoration: underline;
   color: #DB4437;
 }
 
-a#toggle:hover {
+a#toggle:active {
   color: black;
 }
 
@@ -149,27 +149,27 @@ a#toggle:hover {
   transition: transform 0s;
 }
 
-.http:not(:hover)  .switch,
-.https:hover       .switch
+.http:not(:active)  .switch,
+.https:active       .switch
 {
   background-color: rgba(219, 68, 55, 0.26);
 }
 
-.http:not(:hover)  .switch .knob,
-.https:hover       .switch .knob
+.http:not(:active)  .switch .knob,
+.https:active       .switch .knob
 {
   background-color: rgb(219, 68, 55);
   transform: translateX(0px);
 }
 
-.http:hover        .switch,
-.https:not(:hover) .switch
+.http:active        .switch,
+.https:not(:active) .switch
 {
   background-color: rgba(29, 194, 34, 0.5);
 }
 
-.http:hover        .switch .knob,
-.https:not(:hover) .switch .knob
+.http:active        .switch .knob,
+.https:not(:active) .switch .knob
 {
   background-color: rgb(29, 194, 34);
   transform: translateX(20px);
