Added dark mode functionality

--- a/style.css
+++ b/style.css
@@ -53,6 +53,16 @@ button.success {
 button.error {
   background: #FAA;
 }
+
+.darkMode{
+  display: flex;
+  width: 100%;
+  justify-content: left;
+  align-items: center;
+  gap: 0.5rem;
+  
+}
+
 table {
   margin: 1em auto;
   border-collapse: collapse;
@@ -210,4 +220,69 @@ permission {
   padding: 0.5em;
   margin: 10px 10px;
   display: block;
+}
+
+
+/* Dark mode css */
+
+.switch1 {
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 24px;
+}
+
+/* Hide default HTML checkbox */
+.switch1 input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider1 {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider1:before {
+  position: absolute;
+  content: "";
+  height: 16px;
+  width: 16px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider1 {
+  background-color: #2196F3;
+}
+
+input:focus + .slider1 {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider1:before {
+  -webkit-transform: translateX(16px);
+  -ms-transform: translateX(16px);
+  transform: translateX(16px);
+}
+
+/* Rounded sliders */
+.slider1.round {
+  border-radius: 34px;
+}
+
+.slider1.round:before {
+  border-radius: 50%;
 }
