--- a/style.css
+++ b/style.css
@@ -203,6 +203,7 @@ a#toggle:hover {
 }
 
 permission {
+  position: relative;
   background: #def0ff;
   border: solid #005763;  
   border-radius: 5px;
@@ -210,4 +211,5 @@ permission {
   padding: 0.5em;
   margin: 10px 10px;
   display: block;
+  z-index: 99999; /* github-fork-ribbon-wrapper uses 9999 */
 }
