Format files to pass linting.

--- a/style.css
+++ b/style.css
@@ -1,14 +1,16 @@
 /* Light material design boilerplate. */
-html, body {
+html,
+body {
   width: 100%;
   margin: 0;
   padding: 0;
-  background: #EEEEEE;
+  background: #eeeeee;
 }
 
 /* Only apply min-height to non-print media */
 @media not print {
-  html, body {
+  html,
+  body {
     min-height: 100%;
   }
 }
@@ -35,23 +37,26 @@ body {
 }
 
 button {
-  background: #FFF; border: none;
+  background: #fff;
+  border: none;
   font-size: 1.5em;
-  width: 400px; padding: 0.5em; margin: 10px 10px;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  width: 400px;
+  padding: 0.5em;
+  margin: 10px 10px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   transition: all 150ms;
 }
 button:hover {
-  background: #FFA;
+  background: #ffa;
   cursor: pointer;
-  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   transform: translateY(-2px);
 }
 button.success {
-  background: #AFA;
+  background: #afa;
 }
 button.error {
-  background: #FAA;
+  background: #faa;
 }
 table {
   margin: 1em auto;
@@ -79,40 +84,37 @@ table td:first-child {
 }
 
 #toggle .http,
-#toggle .https
-{
+#toggle .https {
   color: rgba(0, 0, 0, 0.5);
   transition: color 0.25s ease-in-out;
 }
 
 #toggle.https .http,
-#toggle.http .https
-{
+#toggle.http .https {
   color: rgba(0, 0, 0, 0.5);
 }
 
 #toggle.http:not(:hover) .http {
-  color: #DB4437;
+  color: #db4437;
 }
 
 #toggle.https:not(:hover) .https {
-  color: #1AC222;
+  color: #1ac222;
 }
 
 #toggle.http:hover .https {
   text-decoration: underline;
-  color: #1AC222;
+  color: #1ac222;
 }
 
 #toggle.https:hover .http {
   text-decoration: underline;
-  color: #DB4437;
+  color: #db4437;
 }
 
 a#toggle:hover {
   color: black;
 }
-
 
 .switch {
   display: inline-block;
@@ -129,13 +131,11 @@ a#toggle:hover {
   height: 20px;
   margin: -3px;
   border-radius: 10px;
-  background-color: #F1F1F1;
-  border:
-    inset 0.5px rgba(255, 255, 255, 0.12),
-    inset 0.5px rgba(255, 255, 255, 0.12);
-  box-shadow:
-    0px 0px 2px 0px rgba(0, 0, 0, 0.12),
-    0px 2px 2px 0px rgba(0, 0, 0, 0.24);
+  background-color: #f1f1f1;
+  border: inset 0.5px rgba(255, 255, 255, 0.12), inset 0.5px
+    rgba(255, 255, 255, 0.12);
+  box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.12), 0px 2px 2px 0px
+    rgba(0, 0, 0, 0.24);
 
   transform: translateX(10px);
   transition: transform 0.25s ease-in-out, background-color 0.25s ease-in-out;
@@ -144,57 +144,52 @@ a#toggle:hover {
 #toggle.instant .switch,
 #toggle.instant .switch .knob,
 #toggle.instant .http,
-#toggle.instant .https
-{
+#toggle.instant .https {
   transition: transform 0s;
 }
 
-.http:not(:hover)  .switch,
-.https:hover       .switch
-{
+.http:not(:hover) .switch,
+.https:hover .switch {
   background-color: rgba(219, 68, 55, 0.26);
 }
 
-.http:not(:hover)  .switch .knob,
-.https:hover       .switch .knob
-{
+.http:not(:hover) .switch .knob,
+.https:hover .switch .knob {
   background-color: rgb(219, 68, 55);
   transform: translateX(0px);
 }
 
-.http:hover        .switch,
-.https:not(:hover) .switch
-{
+.http:hover .switch,
+.https:not(:hover) .switch {
   background-color: rgba(29, 194, 34, 0.5);
 }
 
-.http:hover        .switch .knob,
-.https:not(:hover) .switch .knob
-{
+.http:hover .switch .knob,
+.https:not(:hover) .switch .knob {
   background-color: rgb(29, 194, 34);
   transform: translateX(20px);
 }
 
-.jswarning
-{
+.jswarning {
   color: rgb(219, 68, 55);
   font-size: 2em;
 }
 
-.permission-status, .access-status {
+.permission-status,
+.access-status {
   font-size: small;
   text-transform: uppercase;
   padding-top: .4rem;
   text-align: left;
 }
 
-.permission-status > span, .access-status > span {
+.permission-status > span,
+.access-status > span {
   font-weight: 800;
 }
 
 .demo-instructions {
   padding: .5rem 1rem;
-  margin-top: 1rem;
   text-align: left;
   border: solid 1px;
   max-width: 80rem;
@@ -205,7 +200,7 @@ a#toggle:hover {
 permission {
   position: relative;
   background: #def0ff;
-  border: solid #005763;  
+  border: solid #005763;
   border-radius: 5px;
   width: 400px;
   padding: 0.5em;
