Add granted handlers for each pepc type.
In order to check if an immediate call to the underlying API succeeds. In the past, we saw some issues on MacOS, which cached the permission state internally.

--- a/style.css
+++ b/style.css
@@ -213,3 +213,7 @@ permission {
   display: block;
   z-index: 99999; /* github-fork-ribbon-wrapper uses 9999 */
 }
+
+.permission-element-box {
+  display: inline-block;
+}
